--- a/templates/elasticsearch.yml.j2
+++ b/templates/elasticsearch.yml.j2
@@ -617,8 +617,8 @@ node.zone: {{ facter_ec2_placement_availability_zone }}
 {% endif %}
 
 #### Groovy sandbox and scripted search (ES >=1.6.0) #############
-{% if elasticsearch_groovy_sandbox is defined %}
-script.groovy.sandbox.enabled: true
+{% if elasticsearch_groovy_inline_aggs is defined %}
+script.engine.groovy.inline.aggs: true
 {% endif %}
 
 {% if elasticsearch_allowed_scripting_actions is defined %}
